# open-tabletop

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
open_tabletop/back/: core.py  dictionary.py  elements.py  labels.py  world.py
open_tabletop/utils/: __init__.py
open_tabletop/utils/decorators/: __init__.py  singletons.py
tests/: test_comparisons.py  test_decorators.py  test_labels.py
