[tool.poetry]
name = "open-tabletop"
version = "0.1.0"
description = "An open source way to handle tabletops"
authors = ["Alex-S-H-P <alex.shp38540@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"


[tool.poetry.dev-dependencies]
pytest = "^7.4"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
